// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};

export default componentName;"
`;

exports[`arrow-anonymous-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

const componentName = () => {
  return (() => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\")))();
};

export default componentName;"
`;

exports[`arrow-anonymous-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => {
  return (() => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\")))();
};

export default componentName;"
`;

exports[`arrow-anonymous-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => {
  return (() => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\")))();
};

export default componentName;"
`;

exports[`arrow-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

const componentName = () => {
  return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};

export default componentName;"
`;

exports[`arrow-noreturn snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(\\"div\\", {
  \\"data-component\\": \\"componentName\\"
}, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));

export default componentName;"
`;

exports[`arrow-noreturn-annotate-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-component\\": \\"componentName\\",
  \\"data-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"));

export default componentName;"
`;

exports[`arrow-noreturn-annotate-fragment-no-whitespace snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-component\\": \\"componentName\\",
  \\"data-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"), /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hola Sol\\"));

export default componentName;"
`;

exports[`arrow-noreturn-annotate-fragment-once snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-component\\": \\"componentName\\",
  \\"data-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"), /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hola Sol\\"));

export default componentName;"
`;

exports[`arrow-noreturn-annotate-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-component\\": \\"componentName\\",
  \\"data-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"));

export default componentName;"
`;

exports[`arrow-noreturn-annotate-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
  \\"data-component\\": \\"componentName\\",
  \\"data-source-file\\": \\"filename-test.js\\"
}, \\"Hello world\\"));

export default componentName;"
`;

exports[`arrow-noreturn-annotate-trivial-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, \\"Hello world\\");

export default componentName;"
`;

exports[`arrow-noreturn-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));

export default componentName;"
`;

exports[`arrow-noreturn-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));

export default componentName;"
`;

exports[`arrow-noreturn-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));

export default componentName;"
`;

exports[`arrow-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};

export default componentName;"
`;

exports[`arrow-shorthand-fragment snapshot matches 1`] = `
"import React from 'react';

const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};

export default componentName;"
`;

exports[`component snapshot matches 1`] = `
"import React, { Component } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(\\"div\\", {
      \\"data-component\\": \\"componentName\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }

}

export default componentName;"
`;

exports[`component-annotate-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, \\"A\\");
  }

}

export default componentName;"
`;

exports[`component-annotate-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
      \\"data-component\\": \\"componentName\\",
      \\"data-source-file\\": \\"filename-test.js\\"
    }, \\"Hello world\\"));
  }

}

export default componentName;"
`;

exports[`component-annotate-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", {
      \\"data-component\\": \\"componentName\\",
      \\"data-source-file\\": \\"filename-test.js\\"
    }, \\"Hello world\\"));
  }

}

export default componentName;"
`;

exports[`component-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(Fragment, null, \\"A\\");
  }

}

export default componentName;"
`;

exports[`component-fragment-native snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(Fragment, null, \\"A\\");
  }

}

export default componentName;"
`;

exports[`component-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, \\"A\\");
  }

}

export default componentName;"
`;

exports[`component-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, \\"A\\");
  }

}

export default componentName;"
`;

exports[`hoc-inner-class-component snapshot matches 1`] = `
"import React, { Component } from 'react';

function createAnimatedComponent(WrappedComponent) {
  class AnimatedComponent extends Component {
    render() {
      return /*#__PURE__*/React.createElement(WrappedComponent, {
        \\"data-element\\": \\"WrappedComponent\\",
        \\"data-component\\": \\"AnimatedComponent\\",
        \\"data-source-file\\": \\"filename-test.js\\"
      });
    }

  }

  return AnimatedComponent;
}

export default createAnimatedComponent;"
`;

exports[`nonJSX snapshot matches 1`] = `
"import React, { Component } from 'react';

class TestClass extends Component {
  test() {
    return true;
  }

}

export default TestClass;"
`;

exports[`option-attribute snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};

export default componentName;"
`;

exports[`option-format snapshot matches 1`] = `
"import React, { Component } from 'react';

const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
};

export default componentName;"
`;

exports[`pure snapshot matches 1`] = `
"import React from 'react';

class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(\\"div\\", {
      \\"data-component\\": \\"PureComponentName\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }

}

export default PureComponentName;"
`;

exports[`pure-native snapshot matches 1`] = `
"import React from 'react';

class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(\\"div\\", {
      dataComponent: \\"PureComponentName\\",
      dataSourceFile: \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }

}

export default PureComponentName;"
`;

exports[`pureComponent-fragment snapshot matches 1`] = `
"import React, { Fragment } from 'react';

class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }

}

export default PureComponentName;"
`;

exports[`pureComponent-react-fragment snapshot matches 1`] = `
"import React from 'react';

class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }

}

export default PureComponentName;"
`;

exports[`pureComponent-shorthand-fragment snapshot matches 1`] = `
"import React from 'react';

class PureComponentName extends React.PureComponent {
  render() {
    return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"Hello world\\"));
  }

}

export default PureComponentName;"
`;

exports[`rawfunction snapshot matches 1`] = `
"import React, { Component } from 'react';

function SubComponent() {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-component\\": \\"SubComponent\\"
  }, \\"Sub\\");
}

const componentName = () => {
  return /*#__PURE__*/React.createElement(\\"div\\", {
    \\"data-component\\": \\"componentName\\"
  }, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-element\\": \\"SubComponent\\"
  }));
};

export default componentName;"
`;

exports[`rawfunction-annotate-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

function SubComponent() {
  return /*#__PURE__*/React.createElement(Fragment, null, \\"Sub\\");
}

const componentName = () => {
  return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-element\\": \\"SubComponent\\",
    \\"data-component\\": \\"componentName\\"
  }));
};

export default componentName;"
`;

exports[`rawfunction-annotate-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}

const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-element\\": \\"SubComponent\\",
    \\"data-component\\": \\"componentName\\"
  }));
};

export default componentName;"
`;

exports[`rawfunction-annotate-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}

const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-element\\": \\"SubComponent\\",
    \\"data-component\\": \\"componentName\\"
  }));
};

export default componentName;"
`;

exports[`rawfunction-fragment snapshot matches 1`] = `
"import React, { Component, Fragment } from 'react';

function SubComponent() {
  return /*#__PURE__*/React.createElement(Fragment, null, \\"Sub\\");
}

const componentName = () => {
  return /*#__PURE__*/React.createElement(Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-element\\": \\"SubComponent\\"
  }));
};

export default componentName;"
`;

exports[`rawfunction-react-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}

const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-element\\": \\"SubComponent\\"
  }));
};

export default componentName;"
`;

exports[`rawfunction-shorthand-fragment snapshot matches 1`] = `
"import React, { Component } from 'react';

function SubComponent() {
  return /*#__PURE__*/React.createElement(React.Fragment, null, \\"Sub\\");
}

const componentName = () => {
  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement(SubComponent, {
    \\"data-element\\": \\"SubComponent\\"
  }));
};

export default componentName;"
`;

exports[`react-compiler-deeply-extracted-jsx snapshot matches 1`] = `
"import React from 'react';
const App = () => {
  let t0, t1, t2, t3, t4;
  const t5 = /*#__PURE__*/React.createElement(View, {
    dataElement: \\"View\\",
    dataComponent: \\"App\\",
    dataSourceFile: \\"filename-test.js\\"
  }, /*#__PURE__*/React.createElement(Text, {
    dataElement: \\"Text\\",
    dataSourceFile: \\"filename-test.js\\"
  }, \\"Static\\"));
  t3 = /*#__PURE__*/React.createElement(View, {
    dataElement: \\"View\\",
    dataSourceFile: \\"filename-test.js\\"
  }, /*#__PURE__*/React.createElement(Text, {
    fsClass: isMasked ? 'fs-mask' : 'fs-unmask',
    dataElement: \\"Text\\",
    dataSourceFile: \\"filename-test.js\\"
  }, \\"Dynamic\\"));
  t1 = /*#__PURE__*/React.createElement(Pressable, {
    onPress: onPress,
    dataElement: \\"Pressable\\",
    dataSourceFile: \\"filename-test.js\\"
  }, t5);
  t4 = /*#__PURE__*/React.createElement(View, {
    dataElement: \\"View\\",
    dataSourceFile: \\"filename-test.js\\"
  }, /*#__PURE__*/React.createElement(Text, {
    fsClass: isMasked ? 'fs-mask' : 'fs-unmask',
    dataElement: \\"Text\\",
    dataSourceFile: \\"filename-test.js\\"
  }, \\"Dynamic 2\\"));
  t2 = /*#__PURE__*/React.createElement(Pressable, {
    onPress: onPress,
    dataElement: \\"Pressable\\",
    dataSourceFile: \\"filename-test.js\\"
  }, t3);
  t0 = /*#__PURE__*/React.createElement(ScrollView, {
    dataElement: \\"ScrollView\\",
    dataSourceFile: \\"filename-test.js\\"
  }, t1, t2);
  return t0;
};
export default App;"
`;

exports[`react-compiler-extracted-jsx snapshot matches 1`] = `
"import React from 'react';
function MyComponent() {
  let t0;
  if (t0 === Symbol.for(\\"react.memo_cache_sentinel\\")) {
    t0 = /*#__PURE__*/React.createElement(\\"div\\", {
      \\"data-component\\": \\"MyComponent\\",
      \\"data-source-file\\": \\"filename-test.js\\"
    }, \\"Hello world\\");
  }
  return t0;
}
export default MyComponent;"
`;

exports[`react-compiler-inner-function-jsx-not-annotated-with-outer-name 1`] = `
"import React from 'react';
const App = () => {
  let t0;
  if (t0 === Symbol.for(\\"react.memo_cache_sentinel\\")) {
    const renderItem = item => /*#__PURE__*/React.createElement(View, {
      dataElement: \\"View\\",
      dataComponent: \\"renderItem\\",
      dataSourceFile: \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(Text, {
      dataElement: \\"Text\\",
      dataSourceFile: \\"filename-test.js\\"
    }, item.name));
    t0 = /*#__PURE__*/React.createElement(FlatList, {
      renderItem: renderItem,
      dataElement: \\"FlatList\\",
      dataComponent: \\"App\\",
      dataSourceFile: \\"filename-test.js\\"
    });
  }
  return t0;
};
export default App;"
`;

exports[`react-compiler-multiple-extracted-jsx snapshot matches 1`] = `
"import React from 'react';
const App = () => {
  let t0, t1, t2;
  if (t0 === Symbol.for(\\"react.memo_cache_sentinel\\")) {
    t1 = /*#__PURE__*/React.createElement(Pressable, {
      onPress: onPress,
      fsTagName: \\"FS_Pressable\\",
      dataElement: \\"Pressable\\",
      dataComponent: \\"App\\",
      dataSourceFile: \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(View, {
      dataElement: \\"View\\",
      dataSourceFile: \\"filename-test.js\\"
    }));
    t2 = /*#__PURE__*/React.createElement(Pressable, {
      onPress: onPress,
      dataElement: \\"Pressable\\",
      dataSourceFile: \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(View, {
      dataElement: \\"View\\",
      dataSourceFile: \\"filename-test.js\\"
    }));
    t0 = /*#__PURE__*/React.createElement(ScrollView, {
      dataElement: \\"ScrollView\\",
      dataSourceFile: \\"filename-test.js\\"
    }, t1, t2);
  }
  return t0;
};
export default App;"
`;

exports[`tags snapshot matches 1`] = `
"import React, { Component } from 'react';
import { StyleSheet, Text, TextInput, View, Image, UIManager } from 'react-native';
UIManager.getViewManagerConfig('RCTView').NativeProps.fsClass = \\"String\\";

class Bananas extends Component {
  render() {
    let pic = {
      uri: 'https://upload.wikimedia.org/wikipedia/commons/d/de/Bananavarieties.jpg'
    };
    return /*#__PURE__*/React.createElement(Image, {
      source: pic,
      style: {
        width: 193,
        height: 110,
        marginTop: 10
      },
      fsClass: \\"test-class\\",
      dataElement: \\"Image\\",
      dataComponent: \\"Bananas\\",
      dataSourceFile: \\"filename-test.js\\"
    });
  }

}

class PizzaTranslator extends Component {
  constructor(props) {
    super(props);
    this.state = {
      text: ''
    };
  }

  render() {
    return /*#__PURE__*/React.createElement(View, {
      style: {
        padding: 10
      },
      dataElement: \\"View\\",
      dataComponent: \\"PizzaTranslator\\",
      dataSourceFile: \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(TextInput, {
      style: {
        backgroundColor: '#000',
        color: '#eee',
        padding: 8
      },
      placeholder: \\"Type here to translate!\\" // not supported on iOS
      ,
      onChangeText: text => this.setState({
        text
      }),
      value: this.state.text,
      dataElement: \\"TextInput\\",
      dataSourceFile: \\"filename-test.js\\"
    }), /*#__PURE__*/React.createElement(Text, {
      style: {
        padding: 10,
        fontSize: 42
      },
      dataElement: \\"Text\\",
      dataSourceFile: \\"filename-test.js\\"
    }, this.state.text.split(' ').map(word => word && '🍕').join(' ')));
  }

}

export default function App() {
  return /*#__PURE__*/React.createElement(View, {
    style: styles.container,
    dataElement: \\"View\\",
    dataComponent: \\"App\\",
    dataSourceFile: \\"filename-test.js\\"
  }, /*#__PURE__*/React.createElement(Text, {
    style: {
      color: '#eee'
    },
    dataElement: \\"Text\\",
    dataSourceFile: \\"filename-test.js\\"
  }, \\"FullStory ReactNative testing app\\"), /*#__PURE__*/React.createElement(Bananas, {
    dataElement: \\"Bananas\\",
    dataSourceFile: \\"filename-test.js\\"
  }), /*#__PURE__*/React.createElement(PizzaTranslator, {
    dataElement: \\"PizzaTranslator\\",
    dataSourceFile: \\"filename-test.js\\"
  }));
}
const styles = StyleSheet.create({
  container: {
    flex: 1,
    justifyContent: 'center',
    alignItems: 'stretch',
    backgroundColor: '#222',
    alignItems: 'center',
    justifyContent: 'center'
  }
});"
`;

exports[`unknown-element snapshot matches 1`] = `
"import React, { Component } from 'react';

class componentName extends Component {
  render() {
    return /*#__PURE__*/React.createElement(\\"bogus\\", {
      \\"data-element\\": \\"bogus\\",
      \\"data-component\\": \\"componentName\\",
      \\"data-source-file\\": \\"filename-test.js\\"
    }, /*#__PURE__*/React.createElement(\\"h1\\", null, \\"A\\"));
  }

}

export default componentName;"
`;
